--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ button {
 
 .header {
     width: 400px;
-    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -47,11 +46,19 @@ h2 {
 }
 
 .options {
+    margin-top: 5px;
     width: 400px;
-    margin-top: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    font-size: 0.9em;
 }
+
+.option {
+    padding: 5px;
+    margin: 5px;
+    border: 1px dotted black;
+}
+
 #pixel {
     flex-grow: 1;
     min-height: 1px;
