--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
 body {
-    max-height: 100wh;
+    height: 100wh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 button {
     all: unset;
-    padding: 5px 13px;
+    padding: 5px 10px;
     border-radius: 15px;
 }
 
 .header {
-    width: 400px;
+    min-width: 300px;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -33,14 +34,16 @@ h2 {
 .container {
     display: flex;
     flex-direction: column;
-    min-height: 400px;
-    min-width: 400px;
+    min-height: 300px;
+    min-width: 300px;
     border: 1px solid black;
+    flex-shrink: 1;
+    margin: 20px 10px;
 }
 
 .modes {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .mode {
@@ -49,7 +52,7 @@ h2 {
 
 .options {
     margin-top: 5px;
-    width: 400px;
+    min-width: 300px;
     display: flex;
     justify-content: space-around;
 }
