--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    height: 100wh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -38,7 +38,7 @@ h2 {
     min-width: 300px;
     border: 1px solid black;
     flex-shrink: 1;
-    margin: 20px 10px;
+    margin: 50px 10px;
 }
 
 .modes {
